add / npm scripts (svg, dev)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "test",
-  "description": ".",
+  "private": true,
+  "name": "empathia",
+  "description": "",
   "version": "0.0.1",
   "keywords": [
     "neon",
@@ -24,8 +25,9 @@
     "node": ">=0.10.33"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/server.js"
+    "start": "node bin/server.js",
+    "dev": "webpack -d -w",
+    "svg": "svg-sprite -s --symbol-dest=svg --symbol-prefix=.svg- --ss=sprite.svg --si --sx --shape-id-generator=svg-%s --dest=views/shared public/svg/*.svg"
   },
   "dependencies": {
     "autoprefixer-loader": "^1.2.0",
