--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "gemini-scrollbar": "^1.2.9",
     "json-loader": "^0.5.2",
     "moment-timezone": "^0.4.0",
+    "sanitize.css": "^1.1.0",
     "scrollto": "file:public/js/lib/scrollto",
     "underscore.string": "^3.2.2",
     "vivus": "^0.2.2"
