--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "knex": "^0.8.3",
     "less": "^2.4.0",
     "less-loader": "^2.2.0",
+    "mandrill-api": "^1.0.45",
     "mysql": "^2.6.2",
     "neon": "^2.0.0",
     "neonode-core": "^2.3.6",
