--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "less": "^2.4.0",
     "less-loader": "^2.2.0",
     "mandrill-api": "^1.0.45",
+    "multer": "^0.1.8",
     "mysql": "^2.6.2",
     "neon": "^2.0.0",
     "neonode-core": "^2.3.6",
