--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "autoprefixer-loader": "^1.2.0",
+    "aws-sdk": "^2.2.1",
     "compression-webpack-plugin": "^0.2.0",
     "connect-redis": "^2.2.0",
     "css-loader": "^0.9.1",
