--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mysql": "^2.6.2",
     "neon": "^2.0.0",
     "neonode-core": "^2.3.6",
+    "node-native-zip": "^1.1.0",
     "path": "^0.11.14",
     "pg": "^4.3.0",
     "redis": "^0.12.1",
