Use a BaseMailer with nodemailer and mailgun

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "autoprefixer-loader": "^1.2.0",
     "aws-sdk": "^2.2.1",
+    "bluebird": "^3.3.5",
+    "checkit": "^0.6.0",
     "compression-webpack-plugin": "^0.2.0",
     "connect-redis": "^2.2.0",
     "css-loader": "^0.9.1",
@@ -42,12 +44,15 @@
     "knex": "^0.8.3",
     "less": "^2.4.0",
     "less-loader": "^2.2.0",
+    "lodash": "^4.11.1",
     "mandrill-api": "^1.0.45",
     "multer": "^0.1.8",
     "mysql": "^2.6.2",
     "neon": "^2.0.0",
     "neonode-core": "^2.3.6",
     "node-native-zip": "^1.1.0",
+    "nodemailer": "^2.3.2",
+    "nodemailer-mailgun-transport": "^1.0.1",
     "path": "^0.11.14",
     "pg": "^4.3.0",
     "redis": "^0.12.1",
